apply code review suggestions

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -3,39 +3,13 @@ title: Add authentication and user management to your Next.js app with Clerk in 
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
 ---
 
-# Add authentication and user management to your Next.js app with Clerk
-
-## You will learn how to
-
-* Install `@clerk/nextjs`
-* Set up your environment keys
-* Wrap your Next.js app in `<ClerkProvider />`
-* Limit access to authenticated users
-* Embed the `<UserButton />`
-
-**Estimated time** 1 cup of coffee
-
-### Prerequisites 
-
-* [Set up Clerk](/docs/quickstarts/setup-clerk)
-* [A Next.js project](https://nextjs.org/docs/getting-started/installation)
-
-#### Get the finished project
-
-<Tabs items={["App Router version", "Page Router version"]}>
-  <Tab>
-    [`github.com/clerkinc/clerk-next-app-router-starter`](https://github.com/clerkinc/clerk-next-app-router-starter)
-  </Tab>
-  <Tab>
-    [`github.com/clerkinc/clerk-nextjs-starter`](https://github.com/clerkinc/clerk-nextjs-starter)
-  </Tab>
-</Tabs>
+<NextjsQuickstartHero />
 
 <Steps>
 
 ### Install `@clerk/nextjs`
 
-Clerk's Next.js SDK gives you access to prebuilt components and hooks and [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and Middleware. Install it by running the following command in your terminal:
+Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/nextjs/overview#client-side-helpers), and [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and Middleware. Install it by running the following command in your terminal:
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ```bash filename="terminal"
@@ -55,9 +29,7 @@ Clerk's Next.js SDK gives you access to prebuilt components and hooks and [helpe
 
 In your Next.js project's root folder, you may have an `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
-Add the following code to your `.env.local` file to set your public and secret keys.
-
-**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/), your keys should become visible by clicking on the eye icon.
+Add the following code to your `.env.local` file to set your public and secret keys. If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/), your keys should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
@@ -70,9 +42,9 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Wrap your app in `<ClerkProvider />`
 
-The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. For this project, it makes sense to wrap the `<html/>` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within the app.
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. For this project, it makes sense to wrap the `<html />` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within the app.
 
-<Tabs items={["App Router version", "Page Router version"]}>
+<Tabs items={["App Router", "Pages Router"]}>
   <Tab>
     
     <Callout>
@@ -81,8 +53,13 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
 
     ```tsx filename="/src/app/layout.tsx"
     import { ClerkProvider } from '@clerk/nextjs'
+    import type { Metadata } from 'next'
+    import { Inter } from 'next/font/google'
+    import './globals.css'
+	
+	  const inter = Inter({ subsets: ['latin'] })
 
-    export const metadata = {
+    export const metadata: Metadata = {
       title: 'Next.js 13 with Clerk',
     }
 
@@ -94,7 +71,7 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
       return (
         <ClerkProvider>
           <html lang="en">
-            <body>{children}</body>
+            <body className={inter.className}>{children}</body>
           </html>
         </ClerkProvider>
       )
@@ -107,6 +84,7 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
   </Tab>
   <Tab>
     ```tsx filename="_app.tsx"
+      import '@/styles/globals.css'
       import { ClerkProvider } from "@clerk/nextjs";
       import type { AppProps } from "next/app";
       function MyApp({ Component, pageProps }: AppProps) {
@@ -138,7 +116,7 @@ import { authMiddleware } from "@clerk/nextjs";
 export default authMiddleware({});
 
 export const config = {
-      matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 
 ```
@@ -190,17 +168,10 @@ Now start your Next.js application via `npm run dev`, visit [`localhost:3000`](h
 
 Congratulations! Your app is now only available to authenticated users! But this is just the first step. 
 
+If you would like a repository that demonstrates many of the features Clerk has to offer, such as user, session, and organization management, check out one of Clerk's showcase repositories:
 
-### Get the finished project
-
-<Tabs items={["App Router version", "Page Router version"]}>
-  <Tab>
-    [`github.com/clerkinc/clerk-next-app-router-starter`](https://github.com/clerkinc/clerk-next-app-router-starter)
-  </Tab>
-  <Tab>
-    [`github.com/clerkinc/clerk-nextjs-starter`](https://github.com/clerkinc/clerk-nextjs-starter)
-  </Tab>
-</Tabs>
+- [Clerk + Next.js App Router Demo](https://github.com/clerkinc/clerk-nextjs-demo-app-router)
+- [Clerk + Next.js Pages Router Demo](https://github.com/clerkinc/clerk-nextjs-demo-pages-router)
 
 # Next steps
 
@@ -208,9 +179,9 @@ Congratulations! Your app is now only available to authenticated users! But this
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
     <Cards title="Create custom sign-up and sign-in pages" description="Learn how add custom sign-up and sign-in pages with Clerk components." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
 
-    <Cards title="Read user and session data" description="Learn how to use Clerk's to access the active session and user data in your Next.js application." link="/docs/references/nextjs/read-sessions-data" cta="Learn More" />
+    <Cards title="Read user and session data" description="Learn how to use Clerk's hooks and helpers to access the active session and user data in your Next.js application." link="/docs/references/nextjs/read-session-data" cta="Learn More" />
 
-    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/nextjs/overview#client-side-helpers" cta="Learn More" />
+    <Cards title="Client Side Helpers" description="Learn more about Next.js client side helpers and how to use them." link="/docs/references/nextjs/overview#client-side-helpers" cta="Learn More" />
 
     <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
   </div>
