--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -5,22 +5,22 @@ description: The Authentication object contains information about the current us
 
 # `Authentication` Object
 
-Both [`auth()`](/docs/references/nextjs/auth) and  [`getAuth()`](/docs/references/nextjs/get-auth) return an Authentication object. This JavaScript object contains important information like session data, your user's ID, as well as their org ID.
+Both [`auth()`](/docs/references/nextjs/auth) and  [`getAuth()`](/docs/references/nextjs/get-auth) return an `Authentication` object. This JavaScript object contains important information like session data, your user's ID, as well as their active organization ID.
 
 ## Properties
 
 | Name | Description |
 | --- | --- |
-| `actor` | Holds identifier for the user that is impersonating the current user |
-| `debug` | Used to help debug issues when using Clerk in development |
-| `getToken` | A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template |
-| `orgId` | The current user's organization ID |
-| `orgRole` | The current user's organization role |
-| `orgSlug` | The current user's organization slug |
-| `organization` | The current user's organization object |
-| `sessionClaim` | The current user's session claim |
-| `sessionId` | The current user's session ID |
-| `userId` | The current user's unique identifier |
+| `actor` | Holds identifier for the user that is impersonating the current user. |
+| `debug` | Used to help debug issues when using Clerk in development. |
+| `getToken` | A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template. |
+| `orgId` | The current user's currently active organization ID. |
+| `orgRole` | The current user's currently active organization role. |
+| `orgSlug` | The current user's currently active organization slug. |
+| `organization` | The current user's currently active organization object. |
+| `sessionClaim` | The current user's session claim. |
+| `sessionId` | The current user's session ID. |
+| `userId` | The current user's unique identifier. |
 
 ## Example
 
