--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -9,18 +9,9 @@ Clerk makes it simple to add authentication to your Next.js application. This do
 
 ## Guides
 
+- [Read session and user data](/docs/references/nextjs/read-session-data)
 - [Add custom sign up and sign in pages](/docs/references/nextjs/custom-signup-signin-pages)
 - [Integrate Clerk into your app with tRPC](/docs/references/nextjs/trpc)
-
-## References
-
-### Authentication object
-
-Both `auth()` and `getAuth()` return an Authentication Object. This JavaScript object contains important information like session data, your user's ID, as well as their org ID. Learn more about the Authentication Object [here](/docs/references/nextjs/authentication-object).
-
-### `authMiddleware()`
-
-The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
 
 ## Client-side helpers
 
@@ -38,7 +29,7 @@ Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks
 - [`useOrganization()`](/docs/references/react/use-organization)
 - [`useOrganizationList()`](/docs/references/react/use-organization-list)
 
-## App Router
+## App Router References
 
 Clerk provides first-class support for the [Next.js App Router](https://nextjs.org/docs/app). The below methods and references show how to integrate Clerk features into applications that take advantage of the latest App Router and React Server Components features.
 
@@ -47,9 +38,19 @@ Clerk provides first-class support for the [Next.js App Router](https://nextjs.o
 - [Route Handlers](/docs/references/nextjs/route-handlers)
 - [Server Actions](/docs/references/nextjs/server-actions)
 
-## Pages Router
+## Pages Router References
 
 Clerk continues to provide drop-in support for the Next.js Pages Router. In addition to the main Clerk integration, several methods are available for instrumenting authentication within Pages Router-based applications.
 
 - [`getAuth()`](/docs/references/nextjs/get-auth)
 - [`buildClerkProps()`](/docs/references/nextjs/build-clerk-props)
+
+## Other References
+
+### Authentication object
+
+Both `auth()` and `getAuth()` return an `Authentication` object. This JavaScript object contains important information like session data, your user's ID, as well as their organization ID. Learn more about the `Authentication` object [here](/docs/references/nextjs/authentication-object).
+
+### `authMiddleware()`
+
+The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
