--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -20,59 +20,60 @@ description: Set up a new Clerk account and integrate it into a new application.
 </Callout>
 
 <Steps>
-  ### Log into Clerk
 
-  [Create an account at Clerk](https://dashboard.clerk.com/sign-up) or [log into your Clerk dasbhoard](https://dashboard.clerk.com/).
+### Log into Clerk
 
-  ### Create a Clerk application
+[Create a Clerk account](https://dashboard.clerk.com/sign-up) or [log into your Clerk dasbhoard](https://dashboard.clerk.com/).
 
-  If you've just created an account for the first time, you'll be taken directly to our interactive sign gin form builder.
+### Create a Clerk application
 
-  {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
+If you've just created an account for the first time, you'll be taken directly to our interactive sign-in form builder.
 
-  <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![An interactive builder to make your "<SignIn />" component truly yours, which lets you select your auth providers.](/docs/images/setup-clerk/create-sign-in-comp.png)</div>
-  
-  Otherwise, you'll be redirected to [your Clerk dashboard](https://dashboard.clerk.com/).
-  
-  To create a new app, press the **Add application** card to be taken to the interactive sign form builder.
+{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
-  {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
+<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![An interactive builder to make your "<SignIn />" component truly yours, which lets you select your auth providers.](/docs/images/setup-clerk/create-sign-in-comp.png)</div>
 
-  <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![An "Add application" card on your dashboard](/docs/images/setup-clerk/add-application.png)</div>
+Otherwise, you'll be redirected to [your Clerk dashboard](https://dashboard.clerk.com/).
 
-  ### Select auth providers
+To create a new app, press the **Add application** card to be taken to the interactive sign-in form builder.
 
- `Clerk provides [over 20 authentication providers](/docs/authentication/social-connections/overview) that you can use in your Clerk apps. Select the ones that matter to your users and press **Create application.**
+{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
-  You will be taken to a page that shows you your app's API keys.
+<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![An "Add application" card on your dashboard](/docs/images/setup-clerk/add-application.png)</div>
 
-  {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
+### Select auth providers
 
-  <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![A list of supported frameworks with instructions on how to add API keys underneath.](/docs/images/setup-clerk/env-keys.png)</div>
+Clerk provides [over 20 authentication providers](/docs/authentication/social-connections/overview) that you can use in your Clerk apps. Select the ones that matter to your users and press **Create application.**
 
-  ### Create a new codebase
+You will be taken to a page that shows you your app's API keys.
 
-  The API keys listed in the dashboard are just the first step to integrating Clerk into your apps. To get the most out of Clerk, check out our "Quickstart" guides:
+{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
-  <div className="container mx-auto my-4">
-    <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![A list of supported frameworks with instructions on how to add API keys underneath.](/docs/images/setup-clerk/env-keys.png)</div>
 
-      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/docs/quickstarts/nextjs" cta="Get Started" icon="/docs/images/logos/nextjs.svg" iconWidth="40" />
+### Create a new codebase
 
-      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new React App." link="/docs/quickstarts/react" cta="Get Started" icon="/docs/images/logos/react.svg" />
+The API keys listed in the dashboard are just the first step to integrating Clerk into your apps. To get the most out of Clerk, check out our "Quickstart" guides:
 
-      <FrameworkCards title="JavaScript" description="Add authentication and user management to your JavaScript application." link="/docs/quickstarts/javascript" cta="Get Started" hideArrow={true} icon="/docs/images/logos/javascript.svg" iconWidth="30" />
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
 
-      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/docs/quickstarts/remix" cta="Get Started" icon="/docs/images/logos/remix.svg" />
+    <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/docs/quickstarts/nextjs" cta="Get Started" icon="/docs/images/logos/nextjs.svg" iconWidth="40" />
 
-      <FrameworkCards title="Gatsby" description="Integrate user management and authentication into your Gatsby application." link="/docs/quickstarts/gatsby" cta="Get Started" hideArrow={true} icon="/docs/images/logos/gatsby.svg" />
+    <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new React application." link="/docs/quickstarts/react" cta="Get Started" icon="/docs/images/logos/react.svg" />
 
-      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/docs/quickstarts/redwood" cta="Get Started" icon="/docs/images/logos/redwood.svg" />
+    <FrameworkCards title="JavaScript" description="Add authentication and user management to your JavaScript application." link="/docs/quickstarts/javascript" cta="Get Started" hideArrow={true} icon="/docs/images/logos/javascript.svg" iconWidth="30" />
 
-      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/docs/quickstarts/expo" cta="Get Started" icon="/docs/images/logos/expo.svg" />
+    <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/docs/quickstarts/remix" cta="Get Started" icon="/docs/images/logos/remix.svg" />
 
-      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="/docs/quickstarts/fastify" cta="Get Started" icon="/docs/images/logos/fastify.svg" iconWidth="40" />
-    </div>
+    <FrameworkCards title="Gatsby" description="Integrate user management and authentication into your Gatsby application." link="/docs/quickstarts/gatsby" cta="Get Started" hideArrow={true} icon="/docs/images/logos/gatsby.svg" />
+
+    <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/docs/quickstarts/redwood" cta="Get Started" icon="/docs/images/logos/redwood.svg" />
+
+    <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/docs/quickstarts/expo" cta="Get Started" icon="/docs/images/logos/expo.svg" />
+
+    <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="/docs/quickstarts/fastify" cta="Get Started" icon="/docs/images/logos/fastify.svg" iconWidth="40" />
   </div>
+</div>
 
-  </Steps>
+</Steps>
