--- a/docs/references/nextjs/custom-signup-signin-pages.mdx
+++ b/docs/references/nextjs/custom-signup-signin-pages.mdx
@@ -1,19 +1,21 @@
 ---
-title: "Create custom sign-in and sign-up pages for Next.js with Clerk"
-description: "Learn how to add custom sign-in and sign-up pages to your Next.js app with Clerk's prebuild components and custom flows."
+title: Build your own sign-in and sign-up pages for your Next.js app with Clerk
+description: Learn how to add custom sign-in and sign-up pages to your Next.js app with Clerk's prebuilt components and custom flows.
 ---
 
-# Build your own sign-in and sign-up pages for your Next.js App with Clerk
+# Build your own sign-in and sign-up pages for your Next.js app with Clerk
 
 Clerk offers a set of [prebuilt components](/docs/components/overview) and [custom flows](/docs/custom-flows/overview) that you can use to embed sign in, sign up, and other user management functions into your Next.js application. This is guide shows how you use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components with the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#catch-all-segments).
 
 <Callout>
-    Just getting started with Clerk and Next.js? Try our [quickstart](/docs/quickstarts/nextjs)!
+    Just getting started with Clerk and Next.js? Check out the [quickstart tutorial](/docs/quickstarts/nextjs)!
 </Callout>
 
 <Steps>
 
 ### Build your sign-up page
+
+Create a new file that will be used to render the sign-up page. In the file, import the [`<SignUp />`](/docs/components/authentication/sign-up) component from `@clerk/nextjs` and render it.
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
   ```tsx filename="app/sign-up/[[...sign-up]]/page.tsx"
@@ -35,6 +37,8 @@ Clerk offers a set of [prebuilt components](/docs/components/overview) and [cust
 
 ### Build your sign-in page
 
+Create a new file that will be used to render the sign-up page. In the file, import the [`<SignUp />`](/docs/components/authentication/sign-up) component from `@clerk/nextjs` and render it.
+
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
   ```tsx filename="app/sign-in/[[...sign-in]]/page.tsx"
   import { SignIn } from "@clerk/nextjs";
@@ -53,10 +57,6 @@ Clerk offers a set of [prebuilt components](/docs/components/overview) and [cust
   ```
 </CodeBlockTabs>
 
-<Callout type="info" emoji="ℹ️">
-  By default, the Clerk components inherit the font family. `create-next-app` does not apply a global font family. When you launch your application, you may notice that the font family is different.
-</Callout>
-
 ### Update your environment variables
 
 Next, add environment variables for the `signIn`, `signUp`, `afterSignUp`, and `afterSignIn` paths:
@@ -72,7 +72,7 @@ These values control the behavior of the components when you sign in or sign up 
 
 ### Visit your new pages
 
-Visit you new pages locally at [localhost:3000/sign-in](http://localhost:3000/sign-in) and [localhost:3000/sign-up](http://localhost:3000/sign-up) to see your custom pages.
+Visit your new custom pages locally at [localhost:3000/sign-in](http://localhost:3000/sign-in) and [localhost:3000/sign-up](http://localhost:3000/sign-up) to see your custom pages.
 
 </Steps>
 
@@ -82,6 +82,6 @@ Visit you new pages locally at [localhost:3000/sign-in](http://localhost:3000/si
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
     <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
 
-    <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/overview" cta="Learn More" />
+    <Cards title="Clerk Components" description="Learn more about Clerk's prebuilt components that make authentication and user management easy." link="/docs/components/overview" cta="Learn More" />
   </div>
 </div>
