--- a/docs/references/nextjs/read-session-data.mdx
+++ b/docs/references/nextjs/read-session-data.mdx
@@ -1,9 +1,9 @@
 ---
-title: Read session and user data with Clerk and Next.js
-description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
+title: Read session and user data in your Next.js app with Clerk
+description: Learn how to use Clerk's hooks and helpers to access the active session and user data in your Next.js application.
 ---
 
-# Read session and user data with Clerk and Next.js
+# Read session and user data in your Next.js app with Clerk
 
 Clerk provides a set of [hooks and helpers](/docs/references/nextjs/overview#client-side-helpers) that you can use to access the active session and user data in your Next.js application. Here are examples of how to use these helpers in both the client and server side to get you started.
 
@@ -20,7 +20,7 @@ The `currentUser()` helper will return the [`User`](/docs/references/javascript/
  Under the hood, `currentUser()` uses the [`clerkClient`](/docs/references/backend/overview) wrapper to make a call to Clerk's Backend API. This does count towards the [Backend API Request Rate Limit](/docs/backend-requests/resources/rate-limits#rate-limits). This also uses `fetch()` so it is automatically deduped per request.
 
 <Callout type="info">
-  Any requests from a Client Component to a Route Handler will automatically include the user's current token as the Bearer token.
+  Any requests from a Client Component to a Route Handler will read the session from cookies and will not need the token sent as a Bearer token.
 </Callout>
 
 <Tabs items={["Server components and actions", "Route Handler", "Route Handler w/ User Fetch"]}>
