--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -5,6 +5,8 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 <NextjsQuickstartHero />
 
+## Quickstart 
+
 <Steps>
 
 ### Install `@clerk/nextjs`
@@ -29,7 +31,9 @@ Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/o
 
 In your Next.js project's root folder, you may have an `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
-Add the following code to your `.env.local` file to set your public and secret keys. If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/), your keys should become visible by clicking on the eye icon.
+Add the following code to your `.env.local` file to set your public and secret keys.
+
+**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/), your keys should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
@@ -39,6 +43,8 @@ CLERK_SECRET_KEY={{secret}}
 ```
 
 </InjectKeys>
+
+This sets your public and secret keys.
 
 ### Wrap your app in `<ClerkProvider />`
 
