making the wording between pages and app router more there

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -48,7 +48,7 @@ This sets your public and secret keys.
 
 ### Wrap your app in `<ClerkProvider />`
 
-The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. For this project, it makes sense to wrap the `<html />` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within the app.
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/nextjs'` at the top of your file. 
 
 <Tabs items={["App Router", "Pages Router"]}>
   <Tab>
@@ -56,6 +56,8 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
     <Callout>
       The `app/layout.tsx` file might be in your `src` folder if it isn't in your root folder.
     </Callout>
+
+    For this project, it makes sense to wrap the `<html />` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within the app.
 
     ```tsx filename="/src/app/layout.tsx"
     import { ClerkProvider } from '@clerk/nextjs'
@@ -89,6 +91,8 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
     </Callout>
   </Tab>
   <Tab>
+    For this project, it makes sense to wrap the `<Component />` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within `MyApp`.
+
     ```tsx filename="_app.tsx"
       import '@/styles/globals.css'
       import { ClerkProvider } from "@clerk/nextjs";
