highlighting lines of code in code samples—still needs the styles

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -59,7 +59,7 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
 
     For this project, it makes sense to wrap the `<html />` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within the app.
 
-    ```tsx filename="/src/app/layout.tsx"
+    ```tsx filename="/src/app/layout.tsx" {1,9,13}
     import { ClerkProvider } from '@clerk/nextjs'
 
     export default function RootLayout({
@@ -84,7 +84,7 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
   <Tab>
     For this project, it makes sense to wrap the `<Component />` element with `<ClerkProvider />`. This makes the active session and user context accessible anywhere within `MyApp`.
 
-    ```tsx filename="_app.tsx"
+    ```tsx filename="_app.tsx" {2,7,9}
       import '@/styles/globals.css'
       import { ClerkProvider } from "@clerk/nextjs";
       import type { AppProps } from "next/app";
@@ -128,10 +128,10 @@ export const config = {
 
 Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle.
 
-You can add it anywhere you want, but next to the logo in your main application page is a good start.
+Add it anywhere inside `<ClerkProvider />` in your app. First add `import { UserButton } from "@clerk/nextjs";` to the top of your file. Then add `<UserButton afterSignOutUrl="/"/>`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.tsx"
+```tsx filename="app/page.tsx" {1,6}
 import { UserButton } from "@clerk/nextjs";
 
 export default function Home() {
@@ -143,7 +143,7 @@ export default function Home() {
 }
 ```
 
-```tsx filename="pages/example.tsx"
+```tsx filename="pages/example.tsx" {1,7}
 import { UserButton } from "@clerk/nextjs";
 
 export default function Example() {
