closing the circle by having the learner log out

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -159,9 +159,9 @@ export default function Example() {
 ```
 </CodeBlockTabs>
 
-### Sign up for your application
+### Sign out of your application
 
-Now start your Next.js application via `npm run dev`, visit [`localhost:3000`](http://localhost:3000), and sign up to get access to your application.
+Visit your Next.js application at [`localhost:3000`](http://localhost:3000), click on your avatar, and select "sign out." You are now back where you started—a sign in form.
 
 </Steps>
 
