caught a typo—if it's not a typo, it keeps confusing people in testing

--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -106,7 +106,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 ### Execution order of `beforeAuth`, `publicRoutes`, and `afterAuth`
   
-If you define an `afterAuth` function, it will run even if the request corresponds to a private route and no user is signed out. If you don’t define an `afterAuth` function, a redirect response to the `signInUrl` will be returned automatically. This diagram explains how and when the two handlers are invoked in the runtime.
+If you define an `afterAuth` function, it will run even if the request corresponds to a private route and no user is signed in. If you don’t define an `afterAuth` function, a redirect response to the `signInUrl` will be returned automatically. This diagram explains how and when the two handlers are invoked in the runtime.
 
 ![Execution order of `beforeAuth`, `publicRoutes`, and `afterAuth`](/docs/images/nextjs/middleware-flow-chart.png)
 
