--- a/docs/references/ruby/overview.mdx
+++ b/docs/references/ruby/overview.mdx
@@ -44,7 +44,7 @@ This examples shows how to instantiate an instance of `Clerk::SDK` with your sec
 <InjectKeys>
 
 ```ruby
-clerk = Clerk::SDK.new(secret_key: {{secret}})
+clerk = Clerk::SDK.new(api_key: {{secret}})
 
 # List all users
 clerk.users.all
@@ -82,7 +82,7 @@ You can customize each instance of the `Clerk::SDK` object by passing keyword ar
 
 ```ruby
 clerk = Clerk::SDK.new(
-    secret_key: {{secret}},
+    api_key: {{secret}},
     base_url: "Y",
     logger: Logger.new()
 )
