--- a/docs/references/ruby/overview.mdx
+++ b/docs/references/ruby/overview.mdx
@@ -96,7 +96,7 @@ If an argument is not provided, the configuration object is looked up, which fal
 
 ```ruby
 Clerk.configure do |c|
-  c.secret_key = {{secret}} # if omitted: ENV["CLERK_SECRET_KEY"] - API calls will fail if unset
+  c.api_key = {{secret}} # if omitted: ENV["CLERK_SECRET_KEY"] - API calls will fail if unset
   c.base_url = "https://..." # if omitted: "https://api.clerk.com/v1/"
   c.logger = Logger.new(STDOUT) # if omitted, no logging
   c.middleware_cache_store = Rails.cache # if omitted: no caching
