--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -27,7 +27,7 @@ description: Set up a new Clerk account and integrate it into a new application.
 
 ### Create a Clerk application
 
-If you've just created an account for the first time, you'll be taken directly to our interactive sign-in form builder.
+If you've just created an account for the first time, you'll be taken directly to our interactive authentication setup form.
 
 {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
