--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -35,7 +35,7 @@ If you've just created an account for the first time, you'll be taken directly t
 
 Otherwise, you'll be redirected to [your Clerk dashboard](https://dashboard.clerk.com/).
 
-To create a new app, press the **Add application** card to be taken to the interactive sign-in form builder.
+To create a new app, press the **Add application** card to be taken to the interactive authentication setup form.
 
 {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
