--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -147,7 +147,7 @@ export default function Home() {
 ```tsx filename="pages/example.tsx" {1,7}
 import { UserButton } from "@clerk/nextjs";
 
-export default function Example() {
+export default function Home() {
   return (
     <>
 			<header>
