--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -144,7 +144,7 @@ export default function Home() {
 }
 ```
 
-```tsx filename="pages/example.tsx" {1,7}
+```tsx filename="pages/index.tsx" {1,7}
 import { UserButton } from "@clerk/nextjs";
 
 export default function Home() {
