--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -71,7 +71,8 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
       return (
         <ClerkProvider>
           <html lang="en">
-            <body className={inter.className}>{children}</body>
+            <body>{children}</body>
+
           </html>
         </ClerkProvider>
       )
