--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -5,20 +5,19 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 # Overview
 
-Clerk makes it simple to add authentication to your Next.js application. Looking to get started? Check out our [getting started guide](/docs/quickstarts/nextjs). If you want to learn more about the capabilities and methods available from Clerk's Next.js SDK, check out the reference content below.
+Clerk makes it simple to add authentication to your Next.js application. This documentation covers the capabilities and methods available from Clerk's Next.js SDK.
 
-## `authMiddleware()`
+## Guides
 
-The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
+- [Read session and user data](/docs/references/nextjs/read-session-data)
+- [Add custom sign up and sign in pages](/docs/references/nextjs/custom-signup-signin-pages)
+- [Integrate Clerk into your app with tRPC](/docs/references/nextjs/trpc)
 
 ## Client-side helpers
 
-Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks that Clerk React provides. These hooks give you access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, and a set of useful helper methods for signing in and signing up. You can learn more about these hooks [here](/docs/references/react/use-user).
+Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks that Clerk React provides. These hooks give you access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, and a set of useful helper methods for signing in and signing up. You can learn more about these hooks [in the React SDK reference](/docs/references/react/overview).
 
-{/* Another option for copy. 
-TODO: We can use a partial here.
-
-Clerk provides several helpers for integrating authentication into your Next.js application's client-side code.
+{/* TODO: We can use a partial here. */}
 
 - [`useUser()`](/docs/references/react/use-user)
 - [`useClerk()`](/docs/references/react/use-clerk)
@@ -30,9 +29,7 @@ Clerk provides several helpers for integrating authentication into your Next.js 
 - [`useOrganization()`](/docs/references/react/use-organization)
 - [`useOrganizationList()`](/docs/references/react/use-organization-list)
 
-*/}
-
-## App Router
+## App Router References
 
 Clerk provides first-class support for the [Next.js App Router](https://nextjs.org/docs/app). The below methods and references show how to integrate Clerk features into applications that take advantage of the latest App Router and React Server Components features.
 
@@ -41,13 +38,19 @@ Clerk provides first-class support for the [Next.js App Router](https://nextjs.o
 - [Route Handlers](/docs/references/nextjs/route-handlers)
 - [Server Actions](/docs/references/nextjs/server-actions)
 
-## Pages Router
+## Pages Router References
 
 Clerk continues to provide drop-in support for the Next.js Pages Router. In addition to the main Clerk integration, several methods are available for instrumenting authentication within Pages Router-based applications.
 
 - [`getAuth()`](/docs/references/nextjs/get-auth)
 - [`buildClerkProps()`](/docs/references/nextjs/build-clerk-props)
 
-## Other useful resources
+## Other References
 
-- [Using tRPC](/docs/references/nextjs/trpc)
+### Authentication object
+
+Both `auth()` and `getAuth()` return an `Authentication` object. This JavaScript object contains important information like session data, your user's ID, as well as their organization ID. Learn more about the `Authentication` object [here](/docs/references/nextjs/authentication-object).
+
+### `authMiddleware()`
+
+The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
