Fix double 'should' typo

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -104,7 +104,7 @@ The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides ac
 
 ### Require authentication to access your app
 
-Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should should require authentication to access. 
+Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access. 
 
 Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`. 
 
