--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -28,7 +28,7 @@ Clerk allows you to modify the templates listed below.
 
 ### Email
 
-To access the email templates, navigate to the [Emails](https://dashboard.clerk.com/last-active?path=customization/email) tab under the **Customization** section in the Clerk Dashboard.
+To access the email templates, click on the **Customization** drop down in side nav of the Clerk Dashboard. Click on the <DashboardLink path="customization/email">Emails</DashboardLink> page.
 
 <Images 
 width={3024}
@@ -41,19 +41,19 @@ The following templates are available for customization:
 
 | Template Name | Description |
 | --- | --- |
-| [Invitation](https://dashboard.clerk.com/last-active?path=customization/email/invitation/edit) | Email sent to invite a user to join your application |
-| [Magic link - Sign in](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_in/edit) | Email containing magic link to allow the user to sign in without providing a password |
-| [Magic link - Sign up](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_sign_up/edit) | Email containing magic link that invites the user to sign up |
-| [Magic link - Verify email](https://dashboard.clerk.com/last-active?path=customization/email/magic_link_user_profile/edit) | Email containing magic link to verify the ownership of an email address |
-| [Password changed](https://dashboard.clerk.com/last-active?path=customization/email/password_changed/edit) | Email notifying the user that their password has been changed |
-| [Password removed](https://dashboard.clerk.com/last-active?path=customization/email/password_removed/edit) | Email notifying the user that their password has been removed |
-| [Primary email address changed](https://dashboard.clerk.com/last-active?path=customization/email/primary_email_address_changed/edit) | Email notifying the user that their primary email address has been updated |
-| [Reset password code](https://dashboard.clerk.com/last-active?path=customization/email/reset_password_code/edit) | Email containing an OTP (One Time Password) code that allows the user to reset their password |
-| [Verification code](https://dashboard.clerk.com/last-active?path=customization/email/verification_code/edit) | Email containing an OTP (One Time Password) code for verifying account access |
+| <DashboardLink path="customization/email/invitation/edit">Invitation</DashboardLink> | Email sent to invite a user to join your application |
+| <DashboardLink path="customization/email/magic_link_sign_in/edit">Magic link - Sign in</DashboardLink> | Email containing magic link to allow the user to sign in without providing a password |
+| <DashboardLink path="customization/email/magic_link_sign_up/edit">Magic link - Sign up/<DashboardLink> | Email containing magic link that invites the user to sign up |
+| <DashboardLink path="customization/email/magic_link_user_profile/edit">Magic link - Verify email</DashboardLink> | Email containing magic link to verify the ownership of an email address |
+| <DashboardLink path="customization/email/password_changed/edit">Password changed</DashboardLink> | Email notifying the user that their password has been changed |
+| <DashboardLink path="customization/email/password_removed/edit">Password removed</DashboardLink> | Email notifying the user that their password has been removed |
+| <DashboardLink path="customization/email/primary_email_address_changed/edit">Primary email address changed</DashboardLink> | Email notifying the user that their primary email address has been updated |
+| <DashboardLink path="customization/email/reset_password_code/edit">Reset password code</DashboardLink> | Email containing an OTP (One Time Password) code that allows the user to reset their password |
+| <DashboardLink path="customization/email/verification_code/edit">Verification code</DashboardLink> | Email containing an OTP (One Time Password) code for verifying account access |
 
 ### SMS
 
-To access the SMS templates, navigate to the [SMS](https://dashboard.clerk.com/last-active?path=customization/sms) tab under the **Customization** section in the Clerk Dashboard.
+To access the SMS templates, click on the **Customization** drop down in side nav of the Clerk Dashboard. Click on the <DashboardLink path="customization/sms">SMS</DashboardLink> page.
 
 <Images 
 width={3024}
@@ -66,11 +66,11 @@ The following templates are available for customization:
 
 | Template Name | Description |
 | --- | --- |
-| [Invitation](https://dashboard.clerk.com/last-active?path=customization/sms/invitation/edit) | SMS sent to invite a user to join your application |
-| [Password changed](https://dashboard.clerk.com/last-active?path=customization/sms/password_changed/edit) | SMS notifying the user that their password has been changed |
-| [Password removed](https://dashboard.clerk.com/last-active?path=customization/sms/password_removed/edit) | SMS notifying the user that their password has been removed |
-| [Reset password](https://dashboard.clerk.com/last-active?path=customization/sms/reset_password_code/edit) | SMS containing an OTP (One Time Password) code that allows the user to reset their password |
-| [Verification code](https://dashboard.clerk.com/last-active?path=customization/sms/verification_code/edit) | SMS containing an OTP (One Time Password) code for verifying account access |
+| <DashboardLink path="customization/sms/invitation/edit">Invitation</DashboardLink> | SMS sent to invite a user to join your application |
+| <DashboardLink path="customization/sms/password_changed/edit">Password changed</DashboardLink> | SMS notifying the user that their password has been changed |
+| <DashboardLink path="customization/sms/password_removed/edit">Password removed</DashboardLink> | SMS notifying the user that their password has been removed |
+| <DashboardLink path="customization/sms/reset_password_code/edit">Reset password</DashboardLink> | SMS containing an OTP (One Time Password) code that allows the user to reset their password |
+| <DashboardLink path="customization/sms/verification_code/edit">Verification code</DashboardLink> | SMS containing an OTP (One Time Password) code for verifying account access |
 
 ## Before you start 
 
@@ -104,7 +104,7 @@ Please consult the following sub-sections to see which operations are available 
 
 ### Edit 
 
-Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the [Email](https://dashboard.clerk.com/last-active?path=customization/email) or [SMS](https://dashboard.clerk.com/last-active?path=customization/sms) template listing page.
+Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the <DashboardLink path="customization/email">Email</DashboardLink> or <DashboardLink path="customization/sms">SMS</DashboardLink> template listing page. These pages can be found under the **Customization** drop down in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com).
 
 To persist your changes, click on the **Apply Changes** button at the bottom right. Your changes will then take immediate effect for the corresponding application instance. 
 
