--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -45,7 +45,7 @@ To create a new app, press the **Add application** card to be taken to the inter
 
 Clerk provides [over 20 authentication providers](/docs/authentication/social-connections/overview) that you can use in your Clerk apps. Select the ones that matter to your users and press **Create application.**
 
-You will be taken to a page that shows you your app's API keys.
+Once the application is created in the Clerk dashboard, you will be redirected to the <DashboardLink path="api-keys">API Keys</DashboardLink> page, which will show you your application's API keys.
 
 {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
@@ -53,7 +53,7 @@ You will be taken to a page that shows you your app's API keys.
 
 ### Create a new codebase
 
-The API keys listed in the dashboard are just the first step to integrating Clerk into your apps. To get the most out of Clerk, check out our "Quickstart" guides:
+The API keys listed in the Clerk dashboard are just the first step to integrating Clerk into your apps. To get the most out of Clerk, check out our "Quickstart" guides:
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
