--- a/docs/account-portal/getting-started.mdx
+++ b/docs/account-portal/getting-started.mdx
@@ -27,4 +27,4 @@ https://accounts.<your-domain>.com/organization
 https://accounts.<your-domain>.com/create-organization
 ```
 
-You can access these links under the **Pages** tab on the [Account Portal](https://dashboard.clerk.com/last-active?path=account-portal) page in the Clerk Dashboard.
+To access these links, click on the <DashboardLink path="account-portal">Account Portal</DashboardLink> page in the side nav of the Clerk Dashboard and then, click on the **Pages** tab.
