--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -120,7 +120,7 @@ In order to enable proxying, you need to set a proxy URL for your Clerk instance
 
 <Tabs items={['Dashboard', 'Backend API']}>
   <Tab>
-    1. Navigate to the [Domains](https://dashboard.clerk.com/last-active?path=domains) page in the Clerk Dashboard.
+    1. Click on the <DashboardLink path="domains">Domains</DashboardLink> page in the side nav of the Clerk Dashboard.
     2. Navigate to the **Frontend API** section.
     3. Click on **Advanced**.
     4. Enter your proxy URL in the **Proxy URL** field. The proxy URL must be a valid URL and resolve correctly.
