--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -5,7 +5,7 @@ description: Learn how to manage user access to your application by configuring 
 
 # Restrictions
 
-Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application. These identifiers can be email addresses, phone numbers, and even entire domains. To get started, navigate to the [Restrictions](https://dashboard.clerk.com/last-active?path=user-authentication/restrictions) tab under the **User & Authentication** section of the [Clerk Dashboard](https://dashboard.clerk.com).
+Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application. These identifiers can be email addresses, phone numbers, and even entire domains. To get started, click on the **User & Authentication** drop down in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com). Click on the<DashboardLink path="user-authentication/restrictions">Restrictions</DashboardLink> page.
 
 ## Allowlist
 
@@ -15,7 +15,7 @@ Clerk provides a set of restriction options designed to provide you with enhance
 
 The Allowlist feature allows you to control who can get access to your application. It can restrict sign-ups to only a certain set of email addresses or phone numbers that you define. This can be used in a way that acts as a reverse blocklist, only allowing the users added to access your application and blocking all others.
 
-Enable this feature by navigating to the **Allowlist** section in the [Restrictions](https://dashboard.clerk.com/last-active?path=user-authentication/restrictions) tab under the **User & Authentication** section.
+To enable this feature, click on the **User & Authentication** drop down in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com). Click on the <DashboardLink path="user-authentication/restrictions">Restrictions</DashboardLink> page and go to the **Allowlist** section. Turn on the **Enable allowlist** toggle.
 
 <Callout type="warning" emoji="⚠️">
   Be aware that turning on the Allowlist feature without adding any identifier exceptions blocks *all* sign-ups.
@@ -44,7 +44,7 @@ For example, if you add "clerk.dev" as an allowed email domain, it means that an
 
 The Blocklist feature allows you to control who can get access to your application. It can restrict sign ups for a certain set of email addresses or phone numbers that you define.
 
-Enable this feature by navigating to the **Blocklist** section in the [Restrictions](https://dashboard.clerk.com/last-active?path=user-authentication/restrictions) tab under the **User & Authentication** section.
+To enable this feature, click on the **User & Authentication** drop down in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com). Click on the <DashboardLink path="user-authentication/restrictions">Restrictions</DashboardLink> page and go to the **Blocklist** section. Turn on the **Enable blocklist** toggle.
 
 <Images
 width={3024}
@@ -77,7 +77,7 @@ The Block email subaddresses feature allows you to control who can get access to
   Existing accounts with email subaddresses will not be affected by this restriction, and will still be allowed to sign in.
 </Callout>
 
-Enable this feature by navigating to the **Restrictions** section in the [Restrictions](https://dashboard.clerk.com/last-active?path=user-authentication/restrictions) tab under the **User & Authentication** section.
+To enable this feature, click on the **User & Authentication** drop down in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com). Click on the <DashboardLink path="user-authentication/restrictions">Restrictions</DashboardLink> page and go to the **Restrictions** section. Turn on the **Block email subaddresses** toggle.
 
 <Images
 width={3024}
