--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -54,7 +54,7 @@ Once you've selected the first methods you would like to try, click **Create App
 
 ## Making changes
 
-If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the [User & Authentication](https://dashboard.clerk.com/last-active?path=user-authentication) section of the Clerk Dashboard.
+If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the **User & Authentication** drop down in the side nav of the Clerk Dashboard.
 
 <Images 
 width={3024}
@@ -75,7 +75,7 @@ Let's imagine that you want to require your users to sign up and sign in with th
 
 ### Allow users to sign in using their email
 
-Ensure that **Email address** is enabled as an identifier. Navigate to the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Email address** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign up and sign in with their email.
+Ensure that **Email address** is enabled as an identifier. Click on the **User * Authentication** drop down in the side nav of the Clerk Dashboard. Click on the <DashboardLink path="user-authentication/email-phone-username">Email, Phone, Username</DashboardLink> page. The toggle next to **Email address** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign up and sign in with their email.
 
 <Images 
 width={3024}
@@ -108,7 +108,7 @@ alt="The 'Email address' configuration settings with all options toggled on, and
 
 ### Allow passwordless sign-in
 
-In the **Authentication factors** section under [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username), toggle on **Email verification link** and **Email verification code**. This will allow users to sign in with either a link or a code sent to their email.
+Click on the **User & Authentication** drop down in the side nav of the Clerk Dashboard. Click on the <DashboardLink path="user-authentication/email-phone-username">Email, Phone, Username</DashboardLink> page. In the **Authentication factors** section, toggle on **Email verification link** and **Email verification code**. This will allow users to sign in with either a link or a code sent to their email.
 
 <Images 
 width={3024}
@@ -121,7 +121,7 @@ alt="The 'Authentication factors' section under 'Email, Phone, Username' tab wit
 
 Now, when a user signs up or signs in to your application, Clerk will send a verification link or code to the user's email.
 
-You can make changes to the redirect behavior of both sign-in and sign-up flows by visiting the [Paths](https://dashboard.clerk.com/last-active?path=paths) section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
+To make changes to the redirect behavior of both sign-in and sign-up flows, click on the <DashboardLink path="paths">Paths</DashboardLink> page in the side nav of the Clerk Dashboard. You can also pass in props if you are using Clerk's [custom components](/docs/components/overview).
 
 <Callout type="info">
   For more information on one-time passcodes, see Clerk's [detailed guide](/docs/custom-flows/email-sms-otp).
@@ -132,7 +132,7 @@ You can make changes to the redirect behavior of both sign-in and sign-up flows 
 ### Phone + SMS Code
 
 <Callout>
-  Phone number identifiers and SMS verification are Premium features that are only available on some plans. For more information visit the [Plan & Billing](https://dashboard.clerk.com/last-active?path=plan-billing) section of the Clerk Dashboard.
+  Phone number identifiers and SMS verification are Premium features that are only available on some plans. For more information, click on the <DashboardLink path="plan-billing">Plan & Billing</DashboardLink> page in the side nav of the Clerk Dashboard.
 </Callout>
 
 Let's imagine that your application is going to be exclusively used by people on their phones. You want to collect the user's phone number as the identifier, and you want the user to sign in to your app by entering a one-time code sent via SMS to the user's device.
@@ -141,7 +141,7 @@ Let's imagine that your application is going to be exclusively used by people on
 
 ### Allow users to sign in using their phone number
 
-Ensure that **Phone number** is enabled as an identifier. Navigate to the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Phone number** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign up and sign in with their phone number.
+Ensure that **Phone number** is enabled as an identifier. Click on the **User & Authentication** drop down in the side nav of the Clerk Dashboard. Click on the <DashboardLink path="user-authentication/email-phone-username">Email, Phone, Username</DashboardLink> page. The toggle next to **Phone number** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign up and sign in with their phone number.
 
 <Images 
 width={3024}
@@ -174,7 +174,7 @@ alt="The 'Phone number' configuration settings with all options toggled on."
 
 ### Allow users to sign in with an SMS code
 
-In the **Authentication factors** section under [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username), toggle on **SMS verification code**. This will allows users to sign in with a code sent to their phone.
+Click on the **User & Authentication** drop down in the side nav of the Clerk Dashboard. Click on the <DashboardLink path="user-authentication/email-phone-username">Email, Phone, Username</DashboardLink> page. In the **Authentication factors** section, toggle on **SMS verification code**. This will allows users to sign in with a code sent to their phone.
 
 <Images 
 width={3024}
@@ -187,7 +187,7 @@ alt="The 'Authentication factors' section under 'Email, Phone, Username' tab wit
 
 Now, when a user signs up or signs in to your application, Clerk will send a verification code to the user's phone.
 
-You can make changes to the redirect behavior of both sign-in and sign-up flows by visiting the [Paths](https://dashboard.clerk.com/last-active?path=paths) section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
+You can make changes to the redirect behavior of both sign-in and sign-up flows by visiting the <DashboardLink path="paths">Paths</DashboardLink> page in the side nav of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
 
 <Callout type="info">
   For more information on one-time passcodes, see the [detailed guide](/docs/custom-flows/email-sms-otp).
@@ -203,7 +203,7 @@ Let's imagine that you want your users to sign in with Social OAuth or with a co
 
 ### Disable email/password
 
-Users won't need an email or password, so you can turn those off in the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab under the **User & Authentication** section in the Clerk Dashboard.
+Users won't need an email or password, so you can turn those off. Click on the **User & Authentication** drop down in the side nav of the Clerk Dashboard. Click on the <DashboardLink path="user-authentication/email-phone-username">Email, Phone, Username</DashboardLink> page. Toggle off **Email address** and **Phone number**. Click **Apply changes** in the bottom right corner.
 
 <Images 
 width={3024}
@@ -214,7 +214,7 @@ alt="The 'Email, Phone, Username' tab with a red arrow pointing to the toggle ne
 
 ### Enable social connections
 
-Navigate to the [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections) tab under the **User & Authentication** section in the Clerk Dashboard. 
+Click on the **User & Authentication** drop down in the side nav of the Clerk Dashboard. Click on the <DashboardLink path="user-authentication/social-connections">Social Connections</DashboardLink> page.
 
 Select the OAuth providers that will be used to authenticate your users. In this example, Google is selected.
 
@@ -227,7 +227,7 @@ alt="The 'Social Connections' tab under the 'User & Authentication' section with
 
 ### Enable Web3
 
-Navigate to the [Web3](https://dashboard.clerk.com/last-active?path=user-authentication/web3) tab under the **User & Authentication** section in the Clerk Dashboard. Toggle on the Web3 provider.
+Click on the **User & Authentication** drop down in the side nav of the Clerk Dashboard. Click on the <DashboardLink path="user-authentication/web3">Web3</DashboardLink> page. Toggle on the Web3 provider.
 
 <Images 
 width={3024}
