--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -16,7 +16,7 @@ alt="An interactive builder for customizing your <SignIn /> component, which inc
 
 In addition to the application name set for your instance, there will be standard authentication options to choose from: [identifiers](#choose-identifiers), [authentication strategy](#choose-authentication-strategy), [social login providers](#choose-social-login-providers), and [Web3 authentication](#choose-web3-authentication).
 
-You can always make changes to your sign-up options after your application has been created by visiting the Clerk Dashboard and navigating to the [User & Authentication](https://dashboard.clerk.com/last-active?path=user-authentication) settings.
+You can always make changes to your sign-up options after your application has been created by visiting the Clerk Dashboard and navigating to the **User & Authentication** settings.
 
 ## Choose identifiers
 
@@ -52,7 +52,7 @@ Clerk provides [Web3 authentication](/docs/users/web3) as an option with MetaMas
 
 ## Set up multifactor authentication
 
-Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the [configuration screen](https://dashboard.clerk.com/last-active?path=/user-authentication/multi-factor) in the Clerk Dashboard. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
+Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the configuration screen. Click on <DashboardLink path="user-authentication/multi-factor">Multi-factor</DashboardLink> in the side nav of the Clerk Dashboard. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
 
 <Images
 width={3024}
