De-duped information covering installing SVIX and the signing secret

--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -55,12 +55,6 @@ To learn more about the payload structure, check out the [webhooks reference](/d
 
 Now you need to set up your backend endpoint to receive the webhook events. The exact steps depend on the backend framework you're using. Below are some examples for common frameworks.
 
-<Tabs items={["App Router","Pages Router", "Node"]}>
-
-<Tab>
-
-If you're using Next.js with App Router, you can create a webhook endpoint in the `app/api` directory.
-
 Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
@@ -81,6 +75,12 @@ pnpm add svix
 Next you will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your Next.js project.
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
+
+<Tabs items={["App Router","Pages Router", "Node"]}>
+
+<Tab>
+
+If you're using Next.js with App Router, you can create a webhook endpoint in the `app/api` directory.
 
 ```ts filename="app/api/webhook/route.ts"
 import { Webhook } from 'svix'
@@ -150,27 +150,6 @@ export async function POST(req: Request) {
 
 If you're using Next.js with Pages Router, you can create a webhook endpoint in the `pages/api` directory.
 
-Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
-
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal"
-  npm install svix
-  ```
-
-```bash filename="terminal"
-yarn add svix
-```
-
-```bash filename="terminal"
-pnpm add svix
-```
-
-</CodeBlockTabs>
-
-Next you will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your Next.js project.
-
-![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
-
 ```ts filename="pages/api/webhook.ts"
 import type { IncomingHttpHeaders } from 'http';
 import type { NextApiRequest, NextApiResponse } from 'next';
@@ -214,26 +193,8 @@ type NextApiRequestWithSvixRequiredHeaders = NextApiRequest & {
 </Tab>
 
 <Tab>
-Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal"
-  npm install svix
-  ```
-
-```bash filename="terminal"
-yarn add svix
-```
-
-```bash filename="terminal"
-pnpm add svix
-```
-
-</CodeBlockTabs>
-
-Next you will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your Node project.
-
-![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
+The code example assumes a working Express application. Please adjust as needed for your setup and framework of choice.
 
 ```ts
 import bodyParser from 'body-parser'
